# claude-config-helper

./: .gitignore  CLAUDE.md  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/: criteria-mapping.yml
agents/: claude-config-generator.md  claude-config-reviewer.md  grader.md  (+5 more)
cron/: pyproject.toml
cron/schema/: category-binding.schema.json  category-mapping.schema.json  group-result.schema.json  item.schema.json
cron/scripts/: aggregate.py  category_discovery.py  diff.py  fallback_search.py  fetch.py  nav_fetch.py  plan.py  run_aggregate.py  run_apply.py  run_category_discovery.py  run_diff.py  run_fetch.py  run_nav_fetch.py  run_plan_review.py  run_save_state.py  run_signals.py  run_source_check.py  run_verifier.py  self_validate.py  validate_group_result.py
cron/state/: last_metric.json  last_self_eval.json
cron/templates/: group-prompt.md  pr-body.md
cron/tests/: test_agent_definitions.py  test_aggregate.py  test_category_discovery.py  test_diff.py  test_fallback_search.py  test_fetch.py  test_group_result_schema.py  test_item_schema.py  test_mapping_schema.py  test_nav_fetch.py  test_plan.py  test_run_apply_additional_sources.py  test_run_nav_fetch.py  test_schema_validator.py  test_self_validate.py  test_source_integrity.py  test_verifiers.py  test_yaml_parse.py
cron/tests/fixtures/: invalid_dup_id.yml  sample-hydrate.html  sample-schema.json  valid_skills.yml
cron/tests/fixtures/sample-skill/: SKILL_with_frontmatter.md
cron/verifiers/: file_check.py  line_count.py  regex.py  schema_validator.py  source_integrity.py  yaml_parse.py
(+54 files in other folders)
