[project]
name = "cchelp-cron"
version = "0.1.0"
description = "cchelp weekly criteria update cron pipeline"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.1",
    "jsonschema>=4.20.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "pytest-httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Explicit packages — flat-layout auto-discovery would otherwise flag
# the multiple top-level dirs (state/, schema/, scripts/, verifiers/, tests/)
# as ambiguous and refuse to install.
packages = ["scripts", "verifiers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
